Fix channel tabs z-index to not overlap dropdown

--- a/webapp/channels/src/sass/layout/_headers.scss
+++ b/webapp/channels/src/sass/layout/_headers.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     width: 100%;
     position: relative;
-    z-index: 15;
+    z-index: 14;
     padding: 0 14px;
     border-bottom: 1px solid rgba(var(--center-channel-color-rgb), 0.12);
     background: v(center-channel-bg);
